# Old_Stream

./: app.py  packages.txt  pyproject.toml  replit.md  requirements.txt
attached_assets/: OVERALL_VIEW_1752556023016.TXT  Pasted--PROJECT-PROMPT-MODIFY-APP-TO-HANDLE-NEW-INPUT-FILE-FORMAT-Context-I-have-two-set-1752556015295_1752556015296.txt
static/: styles.css
templates/: certificate.html  deviation_statement.html  extra_items.html  first_page.html  memorandum.html  note_sheet.html
user_prompts/: OVERALL_VIEW.TXT  PASTED INSTRUCTUONS.md
utils/: document_generator.py  excel_processor.py  formatters.py
