[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "streamlit>=1.46.1",
    "weasyprint>=65.1",
]
